{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 54,
  "lineage": "d106168e-ad34-b694-1543-55d57b58e9c8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terra-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/networkInterfaces/terra-demo-nic",
            "internal_domain_name_suffix": "5vzjl2zbjw1ebkkz05yij0jvub.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/publicIPAddresses/terra-demo-machine01-pip",
                "subnet_id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/virtualNetworks/terra-demo-vnet/subnets/SubnetA"
              }
            ],
            "location": "centralindia",
            "name": "terra-demo-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "terra-demo-rg"
          },
          "dependencies": [
            "azurerm_public_ip.terra-demo",
            "azurerm_resource_group.terra-demo",
            "azurerm_subnet.terra-demo",
            "azurerm_virtual_network.terra-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "terra-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/networkInterfaces/terra-demo-nic|/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/networkSecurityGroups/terra-demo-nsg",
            "network_interface_id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/networkInterfaces/terra-demo-nic",
            "network_security_group_id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/networkSecurityGroups/terra-demo-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.terra-demo",
            "azurerm_network_security_group.terra-demo",
            "azurerm_public_ip.terra-demo",
            "azurerm_resource_group.terra-demo",
            "azurerm_subnet.terra-demo",
            "azurerm_virtual_network.terra-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terra-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/networkSecurityGroups/terra-demo-nsg",
            "location": "centralindia",
            "name": "terra-demo-nsg",
            "resource_group_name": "terra-demo-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terra-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "terra-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/networkSecurityGroups/terra-demo-nsg/securityRules/terra-demo-rule",
            "name": "terra-demo-rule",
            "network_security_group_name": "terra-demo-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terra-demo-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terra-demo",
            "azurerm_resource_group.terra-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terra-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/publicIPAddresses/terra-demo-machine01-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.49.202",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "terra-demo-machine01-pip",
            "resource_group_name": "terra-demo-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.terra-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terra-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/virtualNetworks/terra-demo-vnet/subnets/SubnetA",
            "name": "SubnetA",
            "resource_group_name": "terra-demo-rg",
            "virtual_network_name": "terra-demo-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.terra-demo",
            "azurerm_virtual_network.terra-demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terra-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f39572fd-4d21-40b6-a959-d7f084e935a1",
            "id": "/subscriptions/77eac2a6-e515-4813-86c3-ecc73e69e30b/resourceGroups/terra-demo-rg/providers/Microsoft.Network/virtualNetworks/terra-demo-vnet",
            "location": "centralindia",
            "name": "terra-demo-vnet",
            "resource_group_name": "terra-demo-rg"
          },
          "dependencies": [
            "azurerm_resource_group.terra-demo"
          ]
        }
      ]
    }
  ]
}